--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="refresh" content="0;url=http://ai-arts.hhos.net/">
+    <meta http-equiv="refresh" content="0;url=https://ai-arts.hhos.net/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title>
