--- a/res/guide.html
+++ b/res/guide.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="refresh" content="0;url=https://ai-arts.hhos.net/res/guide.html">
+    <meta http-equiv="refresh" content="0;url=https://t.me/AI_Arts_bot/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title>
